bin/testsuite/tests/compiler/src/errors/compiler5094.swg
#global testerror "Err0053"
public var g = 0
